--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
     "@wdio/cli": "^9.0.7",
     "@wdio/local-runner": "^9.0.7",
     "@wdio/mocha-framework": "^9.0.6",
-    "@wdio/spec-reporter": "^9.0.7"
+    "@wdio/spec-reporter": "^9.0.7",
+    "webdriver-manager": "^12.1.9"
   },
   "scripts": {
     "wdio": "wdio run ./wdio.conf.js"
+  },
+  "dependencies": {
+    "date-fns": "^3.6.0"
   }
 }
